--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,18 @@
 {
-  "name": "pimcore/google-marketing-bundle",
-  "license": "GPL-3.0+",
+  "name": "six-it/google-marketing-bundle",
+  "license": "GPL-3.0-or-later",
   "type": "pimcore-bundle",
   "description": "Pimcore Google Marketing Bundle provides additional tools for integrating google marketing tools.",
   "config": {
     "sort-packages": true,
     "preferred-install": {
-      "pimcore/pimcore": "source",
+      "six-it/pimcore-source": "source",
       "*": "dist"
     }
   },
   "require": {
     "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
-    "pimcore/pimcore": "^11.0",
+    "six-it/pimcore-source": "^1.0",
     "google/apiclient": "^2.12"
   },
   "require-dev": {
@@ -20,7 +20,7 @@
     "phpstan/phpstan-symfony": "^1.2.20",
     "phpunit/phpunit": "^9.3",
     "codeception/codeception": "^5.0.10",
-    "codeception/module-symfony":"^3.1.1",
+    "codeception/module-symfony": "^3.1.1",
     "codeception/phpunit-wrapper": "^9",
     "codeception/module-asserts": "^2"
   },
